# cpp-opengl-engine

./: .gitattributes  .gitignore  CMakeLists.txt  INSTALL.md  README.md  README_NETWORK.md  build.sh  data.pak  output.log.txt  run_client.sh
.github/workflows/: headless-server.yml
docs/: ARCHITECTURE.md  MODULAR_ANIMATION_PIPELINE.md  SCRIPTING_GUIDE.md
images/items/: 02-items.json  03-items.json  04-items.json  1-sprites-set-consciousness.txt
images/items/grok-items/: 01-items.json
models/: hellstromtexturedrigged.glb  trace_-_fortnite_skin.glb
models/low_poly_girl/: low_poly_girl.glb
models/objects/boulders/: rock.glb
models/old_hunter/: old_hunter_-_game_character.glb
readmes/: PLAYER_CONFIGURATION.md
readmes/ui/osrs/: OSRS_WIDGET.md  WIDGET_INSPECTOR.md  WIDGET_TYPE.md
scripts/: audit_models.sh  fix_lfs.sh  generate_heightmaps.sh  migrate_models.sh
src/: main.cpp
src/Animation/: AnimatedModel.cpp  AnimatedModel.h  AnimationBlender.cpp  AnimationBlender.h  AnimationClip.cpp  AnimationClip.h  AnimationController.cpp  AnimationController.h  AnimationLoader.cpp  AnimationLoader.h  AnimationState.cpp  AnimationState.h  Bone.cpp  Bone.h  BoneBuffer.cpp  BoneBuffer.h  EquipmentSlot.h  ModularMeshPart.h  Skeleton.cpp  Skeleton.h
src/Atmosphere/: FogSettings.h
src/BoundingBox/: BoundingBox.h  BoundingBoxIndex.h  BoundingBoxRenderer.cpp  BoundingBoxRenderer.h
src/Config/: ConfigManager.cpp  ConfigManager.h  EntityFactory.cpp  EntityFactory.h  PrefabManager.cpp  PrefabManager.h  UiLayoutLoader.cpp  UiLayoutLoader.h
src/Culling/: Frustum.cpp  Frustum.h  FrustumCuller.cpp  FrustumCuller.h
src/ECS/: ECSTest.h  Phase4Test.h
src/ECS/Components/: AIScriptComponent.h  ActionStateComponent.h  ActiveChunkTag.h  AnimatedModelComponent.cpp  AnimatedModelComponent.h  AnimationControllerComponent.h  AssimpComponent.h  AssimpModelComponent.h  ColliderComponent.h  EditorPlacedComponent.h  EntityOwnerComponent.h  InputQueueComponent.h  InputStateComponent.h  InteractableComponent.h  InventoryComponent.h  LODComponent.h  LightComponent.h  MaterialDataComponent.h  NetworkIdComponent.h  NetworkSyncData.h  OriginShiftComponent.h  PathfindingComponent.h  RenderComponent.h  SkillsComponent.h  SpatialComponent.h  StaticModelComponent.h  TerrainComponent.h  TransformComponent.h
src/Engine/: AnimationSystem.cpp  AnimationSystem.h  AsyncResourceLoader.cpp  AsyncResourceLoader.h  EditorSerializer.cpp  EditorSerializer.h  EditorState.h  EditorSystem.cpp  EditorSystem.h  Engine.cpp  Engine.h  GLUploadQueue.cpp  GLUploadQueue.h  ISystem.h  InputDispatcher.cpp  InputDispatcher.h  InputSystem.cpp  InputSystem.h  LODSystem.h  ModelRegistry.cpp  ModelRegistry.h  NetworkInterpolationSystem.cpp  NetworkInterpolationSystem.h  NetworkSystem.cpp  NetworkSystem.h  OriginShiftSystem.h  PathfindingSystem.h  PlayerMovementSystem.cpp  PlayerMovementSystem.h  RenderSystem.cpp  RenderSystem.h  ResourceManager.cpp  ResourceManager.h  SceneLoader.cpp  SceneLoader.h  SceneLoaderJson.cpp  SceneLoaderJson.h  SpatialSystem.h  StreamingSystem.cpp  StreamingSystem.h  (+7 more)
src/EngineTester/: MainGameLoop.cpp  MainGameLoop.h
src/EngineTester/GUI/: MainGuiLoop.cpp  MainGuiLoop.h
src/Entities/: Camera.cpp  Camera.h  CameraInput.cpp  CameraInput.h  ComponentPool.h  Entity.cpp  Entity.h  Player.cpp  Player.h  PlayerCamera.cpp  PlayerCamera.h
src/Entities/Components/: IComponent.h  InputComponent.cpp  InputComponent.h  NetworkSyncComponent.cpp  NetworkSyncComponent.h
src/Events/: EntityClickedEvent.h  Event.h  EventBus.h
src/Guis/: UiMaster.cpp  UiMaster.h
src/Input/: InputMaster.cpp  InputMaster.h
src/Interaction/: EntityPicker.cpp  EntityPicker.h  InteractionSystem.cpp  InteractionSystem.h  InteractiveModel.cpp  InteractiveModel.h
src/Materials/: Material.cpp  Material.h
src/ModelLoader/: GLTFLoader.cpp  GLTFLoader.h  ModelCache.cpp  ModelCache.h  ModelLoader.cpp  ModelLoader.h
src/Navigation/: NavMeshManager.h
src/Network/: MockServer.cpp  MockServer.h  NetworkPackets.h  SharedMovement.cpp  SharedMovement.h
src/Physics/: CharacterController.cpp  CharacterController.h  DebugLineShader.cpp  DebugLineShader.h  PhysicsComponents.h  PhysicsDebugDrawer.cpp  PhysicsDebugDrawer.h  PhysicsSystem.cpp  PhysicsSystem.h
src/RenderEngine/: AnimatedRenderer.cpp  AnimatedRenderer.h  AssimpEntityLoader.cpp  AssimpEntityRenderer.cpp  AssimpEntityRenderer.h  DisplayManager.cpp  DisplayManager.h  EntityRenderer.cpp  EntityRenderer.h  InstancedModel.cpp  InstancedModel.h  InstancedModelManager.cpp  InstancedModelManager.h  InstancedRenderer.cpp  InstancedRenderer.h  Loader.cpp  MasterRenderer.cpp  MasterRenderer.h  ObjLoader.cpp  TerrainRenderer.cpp  TerrainRenderer.h
src/Resources/: animation_demo.cfg  client_settings.json  controls.json  environment_presets.json  models.cfg  npcs.json  scene.cfg  scene.json  server_npcs.cfg  world_config.json
src/Scene/: SceneGraph.cpp  SceneGraph.h  SceneNode.cpp  SceneNode.h
src/Scripting/: LuaScriptEngine.cpp  LuaScriptEngine.h
src/Server/: ServerMain.cpp  ServerNPCManager.cpp  ServerNPCManager.h  ServerStbImage.cpp
src/Shaders/: AnimatedShader.cpp  AnimatedShader.h  InstancedShader.cpp  InstancedShader.h  PBRMaterial.h  PBRShader.cpp  PBRShader.h  ShaderProgram.cpp  ShaderProgram.h  StaticShader.cpp  StaticShader.h  TerrainShader.cpp  TerrainShader.h
src/Shadows/: ShadowFragment.glsl  ShadowMap.cpp  ShadowMap.h  ShadowShader.cpp  ShadowShader.h  ShadowVertex.glsl
src/Streaming/: ChunkData.h  ChunkManager.cpp  ChunkManager.h  JobQueue.h  SpatialGrid.h  StreamingChunk.cpp  StreamingChunk.h
src/Terrain/: HeightMap.cpp  Terrain.cpp  Terrain.h  TerrainData.h  TerrainLOD.h
src/Textures/: TextureLoader.cpp
src/Toolbox/: TerrainPicker.h
src/Tools/: AssetBaker.cpp  ToolsStbImage.cpp
src/Util/: FileSystem.cpp  FileSystem.h  Utils.h
src/Water/: WaterRenderer.cpp  WaterRenderer.h  WaterShader.cpp  WaterShader.h  WaterTile.h
src/World/: World.h
tests/: CMakeLists.txt  test_animation_controller.cpp  test_equipment_slot.cpp  test_skeleton.cpp
(+119 files in other folders)
